Update the definition of the statistical data stored at each moment, and remove unnecessary data structures.
